--- a/joyrun/background/templates/background/base_index.html
+++ b/joyrun/background/templates/background/base_index.html
@@ -137,6 +137,10 @@
                 {% comment %} <li><a href="http://192.168.91.45:5555/dashboard">任 务 监 控</a></li> {% endcomment %}
                 {% comment %} <li><a href="/api/echo/">实验室</a></li> {% endcomment %}
             </ul>
+            <h3 class="am-icon-gears "><em></em> <a href="#">实验室</a></h3>
+            <ul>
+                <li><a href="{% url 'background:function' 'tools' %}">小工具</a></li>
+            </ul>
         </div>
         <!-- sideMenu End -->
     </div>
